--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #f9f9f9;
-      font-size: 14px; /* Reduced font size */
+      font-size: 14px;
     }
     header {
       background-color: #4b002d;
       color: white;
+      padding: 20px;
       text-align: center;
-      padding: 20px 10px;
     }
     header img {
       height: 60px;
@@ -24,8 +24,8 @@
     }
     header h1 {
       margin: 0;
-      font-size: 18px; /* Smaller size */
-      color: white; /* Ensure it is white */
+      font-size: 16px;
+      color: white;
     }
     nav {
       margin-top: 10px;
@@ -36,7 +36,7 @@
       text-decoration: none;
       font-weight: bold;
       cursor: pointer;
-      font-size: 13px;
+      font-size: 12px;
     }
     .container {
       padding: 30px;
@@ -48,7 +48,7 @@
       color: #4b002d;
     }
     h2 {
-      font-size: 18px;
+      font-size: 16px;
     }
     p {
       font-size: 13px;
@@ -94,25 +94,24 @@
     <section class="section">
       <p><strong>Venue:</strong> Behind Wema Bank Plc, Gbogbo, Modakeke, Osun State, Nigeria</p>
       <p><strong>Mission:</strong> To preach the undiluted Word of God and raise mature disciples in Christ.</p>
-      <p><strong>Vision:</strong> To take the full message of the gospel to every lost soul across the world.</p>
+      <p><strong>Vision:</strong> To take the whole word to the lost souls in the whole world.</p>
     </section>
 
     <section class="section">
       <h2>About Full Redemption Chapel, Gbogbo</h2>
-      <p>Full Redemption Chapel, Gbogbo (Faith Arena) is a spiritually vibrant branch of the Jesus is Lord Foundation International. With a firm commitment to the truth of God’s Word, we are devoted to raising strong, Christ-like disciples through sound teaching, prayer, and community. The church serves as a beacon of hope, love, and transformation within Modakeke and beyond.</p>
+      <p>Full Redemption Chapel, Gbogbo (Faith Arena) is a vibrant branch of the Jesus is Lord Foundation International. We're committed to building a community rooted in Christ, reaching souls with the full gospel, and maturing believers through sound teaching and spiritual growth.</p>
     </section>
 
     <div id="goCard" class="card">
-      <h2>About Our General Overseer</h2>
-      <p><strong>Rev. Dr. Francis Olonade</strong> is the esteemed General Overseer of Jesus is Lord Foundation International. He was called into ministry in 1980 and has since been a relentless voice of evangelism and revival across nations. Known for his powerful teaching and healing ministry, he has impacted countless lives with the Gospel. His ministry emphasizes holiness, spiritual growth, and equipping believers for end-time harvest.</p>
-      <p>He is supported by his wife, <strong>Rev. Dr. Grace Olonade</strong>, who serves as Vice President and Senior Pastor. She is a respected minister, counselor, and teacher of the Word. Together, they lead with integrity, vision, and deep spiritual insight, overseeing several branches globally and mentoring pastors and leaders across denominations.</p>
+      <h2 style="font-size: 15px;">About Our General Overseer</h2>
+      <p><strong>Rev. Dr. Francis Olonade</strong> is the esteemed General Overseer of Jesus is Lord Foundation International. Called into ministry in 1980, he is a passionate evangelist, teacher, and spiritual father to many. Through his dedication to the Word and global outreach, he continues to lead a powerful gospel movement across nations.</p>
+      <p>He is supported by his wife, <strong>Rev. Dr. Grace Olonade</strong>, who serves as Vice President and Senior Pastor. She is a gifted minister and teacher of the Word, working side-by-side with her husband to mentor ministers, teach the Bible, and advance the Kingdom of God globally.</p>
       <img src="REV OLONADE AND WIFE.jpg" alt="General Overseers" class="profile-img" />
     </div>
 
     <div id="bpCard" class="card">
-      <h2>About Our Resident Pastor</h2>
-      <p><strong>Pastor (Mrs) Olawale</strong> is the Branch Pastor of Full Redemption Chapel, Gbogbo. She currently serves as the Principal Assistant Registrar at Obafemi Awolowo University, Ile-Ife. With a strong background in administration and spiritual leadership, she has been instrumental in the development and spiritual growth of the church.</p>
-      <p>Pastor Olawale is passionate about empowering others through teaching, mentoring, and example. Her leadership is marked by excellence, dedication to sound doctrine, and a heart for building a Christ-centered community.</p>
+      <h2 style="font-size: 15px;">About Our Resident Pastor</h2>
+      <p><strong>Pastor (Mrs) Olawale</strong> is the Branch Pastor of Full Redemption Chapel, Gbogbo. She currently serves as the Principal Assistant Registrar at Obafemi Awolowo University. With a background in administration and ministry, she is a passionate, spirit-filled leader focused on spiritual maturity and excellence in service.</p>
       <img src="PASTOR MRS OLAWALE.jpg" alt="Pastor Olawale" class="profile-img" />
     </div>
   </div>
