--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </div>
 
     <div id="bpCard" class="card">
-      <h2 style="font-size: 15px;">About Our Resident Pastor</h2>
+      <h2 style="font-size: 15px;">About Our Pastor</h2>
       <p><strong>Pastor (Mrs) Olawale</strong> is the Branch Pastor of Full Redemption Chapel, Gbogbo. She currently serves as the Principal Assistant Registrar at Obafemi Awolowo University. With a background in administration and ministry, she is a passionate, spirit-filled leader focused on spiritual maturity and excellence in service.</p>
       <img src="PASTOR MRS OLAWALE.jpg" alt="Pastor Olawale" class="profile-img" />
     </div>
