--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <h1>Full Redemption Chapel, Gbogbo (Faith Arena)</h1>
     <nav>
       <a onclick="toggleSection('goCard')">About Our General Overseer</a>
-      <a onclick="toggleSection('bpCard')">About Our Resident Pastor</a>
+      <a onclick="toggleSection('bpCard')">About Our Pastor</a>
     </nav>
   </header>
 
